# dagger

./: .gitignore  .gitmodules  Dagger.sln  Dagger.vcxproj  Dagger.vcxproj.filters  README.md  config.txt  dagger.h  engine.h  escape.h  frame_count.h  generate_projects.bat  glfw3.lib  imgui.ini  keylog.h  main.cpp  meson.build  render.h  styleguide.md  system.h
Res/Shaders/: standard.fs.glsl  standard.shader  standard.vs.glsl
Source/: console.cpp  console.h  core.h  diag.cpp  diag.h  engine.h  escape.h  events.h  files.h  fps.h  frame_count.h  glad.c  gui.cpp  gui.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.h  jiggle.cpp  jiggle.h  keylog.h  main.cpp  optimization.h  plotvar.cpp  plotvar.h  render.h  resource_manager.h  resources.h  sdl_image.h  shader.cpp  shader.h  shaders.cpp  shaders.h  sprite.cpp  sprite.h  sprite_render.cpp  sprite_render.h  structures.h  system.h  test.cpp  test.h  texture.h  (+6 more)
Source/imgui/: glad.h  imfilebrowser.cpp  imfilebrowser.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
data/: bat1.txt  bat2.txt  bat3.txt  bat4.txt  editor.ini  goblin2.txt  goblin3.txt  goblin4.txt  goblin5.txt  goblin6.txt  imgui.ini  lomm.ini  path.txt  pathbat.txt  pathidlebat.txt  pathidlegoblin1.txt  plight.ini  racing.ini  slime1.txt  slime2.txt  slime3.txt  slime4.txt  slime5.txt  spots.txt  teamgame.ini  tilemap_test.map  tiles_example.ini
data/docs/: home
data/input-contexts/: ASDW_circular.json  Ancient_defenders.json  Arrows_circular.json  Arrows_topdown.json  Circular.json  MainMenu_Input.json  among_them.json  among_them_input.json  among_them_reload.json  arrows.json  asdw.json  asdw_topdown.json  controls.json  menu.json  player.json  tank1.json  tank2.json
data/levels/: backdrop_1.txt  backdrop_2.txt  backdrop_3.txt  creatures_1.map  creatures_3.map  creatures_boss.map  creatures_level_1.map  creatures_start.map  cretures_2.map  floor_1.map  floor_123.map  floor_1234.map  floor_124.map  floor_13.map  floor_134.map  floor_2.map  floor_24.map  floor_3.map  floor_4.map  floor_corridor.map  floor_level_1.map  level_1.txt  level_2.txt  level_3.txt  objects_1.map  objects_2.map  objects_level_1.map  player_positions.txt
data/maps/: mapBuilding.map
data/shaders/: standard.fs.glsl  standard.glsl.json  standard.vs.glsl
data/sounds/: Music credits.txt
data/spritesheets/: BloodTower.spritesheet  FireTower.spritesheet  IceTower.spritesheet  PoisonTower.spritesheet  StormTower.spritesheet  SunTower.spritesheet  among_them_spritesheet.spritesheet  among_them_tilemap.spritesheet  chara_hero.spritesheet  (+17 more)
docs/: _Sidebar
(+596 files in other folders)
